--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0；text-align:center;">
-    <title>出校</title>
+    <title>进校</title>
 </head>
 <body>
-    <h1 style="font-family:Heiti SC;text-align:center;">出校</h1>
+    <h1 style="font-family:Heiti SC;text-align:center;">进校</h1>
     <div style="text-align:center">
     <img src="img/pic.jpeg" alt="">
     <div style="text-align:center;">王晶-201933030128</div>
     </div>
     <div style="border: 0.3px solid rgb(147, 142, 142);">
     </div>
-    <h1 style="font-weight:Heiti SC;text-align:center;">白名单验证通过，该申请离校扫码1次，离校码只能使用一次，请不要重复打开</h1>
+    <h1 style="font-weight:Heiti SC;text-align:center;">白名单验证通过</h1>
     <style>
         #watch{
             font-size: 35px;
