--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 style="font-family:Heiti SC;text-align:center;">进校</h1>
     <div style="text-align:center">
-    <img src="img/pic.jpeg" alt="">
+    <img src="img/pic.JPEG" alt="">
     <div style="text-align:center;">许宇银-201939060141</div>
     </div>
     <div style="border: 0.3px solid rgb(147, 142, 142);">
